# llmlib

./: .envrc  .gitignore  ARCHITECTURE.md  DATA_SCIENCE_LLM_PROJECT.md  MIGRATION.md  PORTFOLIO_PROJECTS.md  ReadMe.md  RoadMap.md  TMUX_GUIDE.md  full_training_log.txt  proper_test_config.json  pyproject.toml  real_test_config.json  test_config.json  training_log_capture.txt
scripts/modeling/: sanity_check_quick.py  sanity_modern_gpt.py
scripts/tokenization/: ReadMe_Tokenization.md  sanity_bpe_training.py  sanity_byte_bpe_tokenizer.py
src/llmlib/: __init__.py  bpe_tokenizer.py  bpe_training.py  cli.py  io.py  modern_bpe_tokenizer.py  tiny_model.py  tokenizer.py
src/llmlib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/llmlib/cli/: advanced_train_cli.py  main_cli.py  main_unified_cli.py  modern_gpt_cli.py  modern_gpt_infer_cli.py  modern_gpt_train_cli.py  monitor_cli.py  sleep_prevention_cli.py  tiny_gpt_cli.py  tmux_cli.py  train_pipeline_cli.py  train_tokenizer_cli.py  validate_cli.py  validate_simple_cli.py
src/llmlib/data/: ENHANCED_PIPELINE.md  ReadMe.md  ReadMe_Data.md  advanced_synth_expand.py  augment_corpus.py  corpus_stats.py  dedupe_and_split.py  prepare_corpus.py  run_data_generation.py  run_full_pipeline.py  sanity_checks.py  split_corpus.py  synth_expand.py  test_enhanced_pipeline.py  web_scrape_elephants.py
src/llmlib/data/pipeline/: ReadMe_Pipeline.md  run_full_data_pipeline.py
src/llmlib/dataset/: corpus_stats.py  dedupe_and_split.py  prepare_corpus.py  split_corpus.py  synth_expand.py
src/llmlib/modeling/: modern_gpt.py  tiny_model.py
src/llmlib/modeling/configs/: tiny_config.py
src/llmlib/tokenization/: __init__.py  byte_bpe_tokenizer.py  char_bpe_tokenizer.py  char_tokenizer.py  registry.py
src/llmlib/tokenization/training/: bpe_training.py
src/llmlib/training/: lr_schedulers.py
src/llmlib/utils/: ReadMe.md  checkpoint.py  config_util.py  logger.py  path_util.py  tokenizer_io.py
test/: ReadMe.md  ReadMe_Test.md  test_io.py  test_tiny_model.py  test_tokenizer.py
test/modeling/: test_tiny_model.py
test/tokenization/: ReadMe.md  test_bpe_training.py  test_byte_bpe_tokenizer.py  test_char_tokenizer.py  test_tokenizer.py
test/utils/: test_io.py
test_data/: train.txt  val.txt
