[build-system]
requires        = ["setuptools>=61.0"]
build-backend   = "setuptools.build_meta"

[project]
name            = "llmlib"
version         = "1.2.10"
description     = "Pooja's LLM utilities and tiny transformer library"
readme          = "ReadMe.md"
requires-python = ">=3.10"
dependencies    = []

[project.scripts]
tiny-gpt-train  = "llmlib.cli.main_cli:tiny_gpt_train"
tiny-gpt-infer  = "llmlib.cli.main_cli:tiny_gpt_infer"

### Modern GPT CLI entries
train-tokenizer = "llmlib.cli.train_tokenizer_cli:main"
modern-gpt-train = "llmlib.cli.modern_gpt_cli:modern_gpt_train"
modern-gpt-infer = "llmlib.cli.modern_gpt_cli:modern_gpt_infer"

[tool.setuptools]
package-dir     = {"" = "src"}

[tool.setuptools.packages.find]
where           = ["src"]
